--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2>Berlin</h2>
             </div>
 			
-			<div class="destination" id="barcelona">
+			<div class="destination" id="jedddah">
                 <h2>Jeddah</h2>
             </div>
         </div>
