Add destintation to Yemen

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 			<div class="destination" id="jedddah">
                 <h2>Jeddah</h2>
             </div>
+			
+			<div class="destination" id="yemen">
+                <h2>Yemen</h2>
+            </div>
         </div>
     </div>
 
